@startuml

title __EX1's Class Diagram__\n

  package aula06.Ex1 {
    class Database {
        - employees : Vector<Employee>
        + Database()
        + addEmployee()
        + deleteEmployee()
        + getAllEmployees()
    }
  }
  

  package aula06.Ex1 {
    class DatabaseAdapter {
        + DatabaseAdapter()
        + addEmployee()
        + addEmployee()
        + deleteEmployee()
        + verify()
        + getAllEmployees()
    }
  }
  

  package aula06.Ex1 {
    interface DatabaseAdapterInterface {
        {abstract} + addEmployee()
        {abstract} + addEmployee()
        {abstract} + deleteEmployee()
        {abstract} + verify()
        {abstract} + getAllEmployees()
    }
  }
  

  package aula06.Ex1 {
    class Employee {
        - name : String
        - emp_num : long
        - salary : double
        + Employee()
        + getName()
        + getEmpNum()
        + getSalary()
    }
  }
  

  package aula06.Ex1 {
    class Empregado {
        - nome : String
        - apelido : String
        - codigo : int
        - salario : double
        + Empregado()
        + apelido()
        + nome()
        + codigo()
        + salario()
    }
  }
  

  package aula06.Ex1 {
    class Pst {
        {static} - input : Scanner
        {static} + main()
        {static} - checkWithoutAdapter()
        {static} - checkWithAdapter()
        {static} - printTwoDatabases()
    }
  }
  

  package aula06.Ex1 {
    class Registos {
        - empregados : ArrayList<Empregado>
        + Registos()
        + insere()
        + remove()
        + isEmpregado()
        + listaDeEmpregados()
    }
  }
  

  DatabaseAdapter -up-|> DatabaseAdapterInterface
  DatabaseAdapter o-- Database : database1
  DatabaseAdapter o-- Registos : database2


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
